fix: endpoints and key names
